Single API endpoint to get workflow events.
