# temporal-apps/workflow-api/src/Controller/GreetingController.php
@@ -2,7 +2,6 @@
 
 namespace App\Controller;
 
-use App\Workflow\Library\WorkflowClient;
 use App\Workflow\Service\Workflow\SimpleActivity\GreetingWorkflowFacade;
 use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
 use Symfony\Component\HttpFoundation\JsonResponse;
@@ -30,18 +29,6 @@ class GreetingController extends AbstractController
         return $this->json([
             'workflow' => $workflowExecution->getID(),
             'run' => $workflowExecution->getRunID(),
-        ]);
-    }
-
-    #[Route(
-        '/workflows/{workflowId}/{runId}/events',
-        name: 'get_workflow_events',
-        methods: [Request::METHOD_GET]
-    )]
-    public function getEvents(WorkflowClient $workflowClient, string $workflowId, string $runId): JsonResponse
-    {
-        return $this->json([
-            'events' => $workflowClient->getWorkflowEvents($workflowId, $runId),
         ]);
     }
 }
